# bihar-eu

./: .gitignore  README.md  fetch_results.py  pyproject.toml
bihar_eu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
constants/: third_sem_cse_subjects.py  url.py
utils/: append.py  save_json.py
